--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^0.19.0",
     "cuid": "2.1.6",
     "easy-peasy": "^2.6.6",
+    "fbox": "1.3.1",
     "formik": "1.5.8",
+    "moment": "2.24.0",
     "next": "^9.0.2",
     "next-compose-plugins": "^2.2.0",
     "next-offline": "^4.0.2",
@@ -23,9 +25,10 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-pdf": "4.1.0",
+    "react-to-print": "2.5.1",
     "styled-components": "4.3.2"
   },
   "keywords": [],
-  "name": "punchkub147-portfolio",
+  "name": "pj-punchilz-portfolio",
   "description": ""
 }
